--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "imagekitio-react": "^4.3.0",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0",
